# calculator

./: .gitignore  .swp  Add_Function.c  CMakeLists.txt  README.md  config.cmake  config.h  config.py  configuration.h  feature.cmake  generate_config.py  main.c  modulus.c
Add_Module/: CMakeLists.txt
Add_Module/Include/: Add_Function.h
Add_Module/src/: Add_Function.c
Modulus_Module/: CMakeLists.txt  modulus.c
Modulus_Module/Include/: modulus.h
Modulus_Module/src/: modulus.c
division_cmake/: CMakeLists.txt  main.c
division_cmake/include/: division.h
division_cmake/src/: division.c
division_module/: CMakeLists.txt
mul_module/: .gitignore  CMakeLists.txt  main.c
mul_module/inc/: mul.h
mul_module/src/: mul.c
sub_module/: CMakeLists.txt
sub_module/include/: sub.h
sub_module/src/: sub.c
